--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             }
         }
     </script>
+    <style>
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .scrollbar-hide::-webkit-scrollbar {
+            display: none;
+        }
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .scrollbar-hide {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        /* Smooth scrolling */
+        #carousel-container {
+            cursor: grab;
+        }
+        #carousel-container:active {
+            cursor: grabbing;
+        }
+    </style>
 </head>
 <body class="bg-[#fafafa] text-[#171717] font-sans leading-relaxed py-6 px-4 min-h-screen">
     <div class="max-w-[900px] mx-auto">
@@ -25,7 +43,7 @@
         </header>
 
         <main class="flex flex-col gap-12">
-            <section class="flex flex-col gap-5">
+            <section id="input-section" class="flex flex-col gap-5 transition-opacity duration-300">
                 <div class="flex flex-col gap-2">
                     <label for="api-key" class="text-sm font-medium text-[#171717]">OpenAI API Key</label>
                     <input 
@@ -33,7 +51,7 @@
                         id="api-key" 
                         placeholder="sk-..."
                         autocomplete="off"
-                        class="w-full px-3.5 py-3 border border-[#e5e5e5] rounded-lg text-sm font-sans bg-white text-[#171717] focus:outline-none focus:border-[#171717] transition-colors"
+                        class="w-full px-3.5 py-3 border border-[#e5e5e5] rounded-lg text-sm font-sans bg-white text-[#171717] focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors"
                     >
                 </div>
 
@@ -43,21 +61,32 @@
                         id="story-prompt" 
                         rows="3"
                         placeholder="A robot learning to paint in Paris..."
-                        class="w-full px-3.5 py-3 border border-[#e5e5e5] rounded-lg text-sm font-sans bg-white text-[#171717] focus:outline-none focus:border-[#171717] transition-colors resize-y min-h-[80px]"
+                        class="w-full px-3.5 py-3 border border-[#e5e5e5] rounded-lg text-sm font-sans bg-white text-[#171717] focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors resize-y min-h-[80px]"
                     ></textarea>
                 </div>
 
-                <button id="generate-btn" class="px-6 py-3 bg-black text-white rounded-lg text-sm font-medium font-sans cursor-pointer transition-opacity hover:opacity-80 disabled:opacity-50 disabled:cursor-not-allowed">
+                <button id="generate-btn" class="px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg text-sm font-medium font-sans cursor-pointer transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
                     Generate Story
                 </button>
 
                 <div id="error-message" class="text-red-600 text-sm min-h-[20px] hidden" role="alert"></div>
             </section>
 
-            <section class="w-full">
-                <div id="story-grid" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <!-- Cards will be dynamically created here -->
+            <section id="output-section" class="w-full hidden">
+                <div class="relative">
+                    <div id="carousel-container" class="overflow-x-auto scroll-smooth snap-x snap-mandatory scrollbar-hide" style="scrollbar-width: none; -ms-overflow-style: none;">
+                        <div id="story-carousel" class="flex gap-4 px-4 md:px-[calc(50vw-250px)]" style="scroll-snap-type: x mandatory;">
+                            <!-- Cards will be dynamically created here -->
+                        </div>
+                    </div>
+                    <!-- Navigation dots -->
+                    <div id="carousel-dots" class="flex justify-center gap-2 mt-4">
+                        <!-- Dots will be dynamically created here -->
+                    </div>
                 </div>
+                <button id="create-new-btn" class="mt-6 mx-auto px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg text-sm font-medium font-sans cursor-pointer transition-colors hidden">
+                    Create New Story
+                </button>
             </section>
         </main>
     </div>
