Add v3 improvements: center first card, smaller card size, improved drag/swipe navigation

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <section id="output-section" class="w-full hidden">
                 <div class="relative">
                     <div id="carousel-container" class="overflow-x-auto scroll-smooth snap-x snap-mandatory scrollbar-hide" style="scrollbar-width: none; -ms-overflow-style: none;">
-                        <div id="story-carousel" class="flex gap-4 px-4 md:px-[calc(50vw-250px)]" style="scroll-snap-type: x mandatory;">
+                        <div id="story-carousel" class="flex gap-4 px-[calc(50vw-175px)] md:px-[calc(50vw-175px)]" style="scroll-snap-type: x mandatory;">
                             <!-- Cards will be dynamically created here -->
                         </div>
                     </div>
