Center content vertically on the page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
     </style>
 </head>
-<body class="bg-[#fafafa] text-[#171717] font-sans leading-relaxed py-6 px-4 min-h-screen">
-    <div class="max-w-[900px] mx-auto">
+<body class="bg-[#fafafa] text-[#171717] font-sans leading-relaxed px-4 min-h-screen flex items-center justify-center">
+    <div class="max-w-[900px] w-full">
         <header class="text-center mb-12">
             <h1 class="text-3xl md:text-[32px] font-semibold mb-2 text-[#171717]">Story Generator</h1>
             <p class="text-base text-[#737373]">Generate a 4-panel visual story from your idea</p>
@@ -78,8 +78,8 @@
                 <div id="error-message" class="text-red-600 text-sm min-h-[20px] hidden" role="alert"></div>
             </section>
 
-            <section id="output-section" class="w-full hidden">
-                <div class="relative">
+            <section id="output-section" class="w-full hidden flex flex-col items-center justify-center">
+                <div class="relative w-full">
                     <div id="carousel-container" class="overflow-x-auto scroll-smooth snap-x snap-mandatory scrollbar-hide" style="scrollbar-width: none; -ms-overflow-style: none; -webkit-overflow-scrolling: touch; overscroll-behavior-x: contain;">
                         <div id="story-carousel" class="flex gap-4 px-[calc(50vw-175px)] md:px-[calc(50vw-175px)]" style="scroll-snap-type: x proximity; scroll-padding: 0;">
                             <!-- Cards will be dynamically created here -->
