--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/motion@11.11.17/dist/motion.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/motion@12.23.26/dist/motion.js"></script>
     <script>
+        // Extract Motion functions
+        const { animate } = Motion;
+        
         tailwind.config = {
             theme: {
                 extend: {
