--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/motion@12.23.26/dist/motion.js"></script>
     <script>
-        // Extract Motion functions
-        const { animate } = Motion;
-        
         tailwind.config = {
             theme: {
                 extend: {
@@ -23,63 +20,12 @@
             }
         }
     </script>
-    <style>
-        /* Hide scrollbar for Chrome, Safari and Opera */
-        .scrollbar-hide::-webkit-scrollbar {
-            display: none;
-        }
-        /* Hide scrollbar for IE, Edge and Firefox */
-        .scrollbar-hide {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
-        /* Card stack styling */
-        #card-stack {
-            perspective: 1000px;
-        }
-        .story-card {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            cursor: grab;
-            user-select: none;
-            transition: transform 0.3s ease, z-index 0s;
-            will-change: transform;
-        }
-        .story-card:active {
-            cursor: grabbing;
-        }
-        .story-card.dragging {
-            transition: none;
-        }
-        /* Show images on all cards, but make non-active cards semi-transparent */
-        .story-card:not(.active) .card-content {
-            opacity: 0.4;
-            pointer-events: none;
-        }
-        .story-card.active {
-            overflow: visible;
-        }
-        .story-card.active .card-content {
-            opacity: 1;
-        }
-        /* Cards behind show their images with reduced opacity */
-        .story-card:not(.active) {
-            /* No background needed - transparent */
-        }
-        /* Mobile touch improvements */
-        @media (hover: none) and (pointer: coarse) {
-            .story-card {
-                cursor: default;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-[#fafafa] text-[#171717] font-sans leading-relaxed px-4 min-h-screen flex items-center justify-center relative">
     <!-- Subtle background pattern -->
     <div class="fixed inset-0 pointer-events-none opacity-[0.03]" style="background-image: radial-gradient(circle, #000 1px, transparent 1px); background-size: 24px 24px;"></div>
-    
+
     <div class="max-w-[900px] w-full relative z-10">
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold mb-2 text-[#171717]" style="font-family: 'Playfair Display', serif;">Story Generator</h1>
@@ -90,9 +36,9 @@
             <section id="input-section" class="flex flex-col gap-5 transition-opacity duration-300 max-w-[500px] mx-auto w-full">
                 <div class="flex flex-col gap-2">
                     <label for="api-key" class="text-sm font-medium text-[#171717]">OpenAI API Key</label>
-                    <input 
-                        type="password" 
-                        id="api-key" 
+                    <input
+                        type="password"
+                        id="api-key"
                         placeholder="sk-..."
                         autocomplete="off"
                         class="w-full px-3.5 py-3 border border-[#e5e5e5] rounded-lg text-sm font-sans bg-white text-[#171717] focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors"
@@ -132,7 +78,6 @@
         </main>
     </div>
 
-    <script src="app.js" defer></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
